added API contract tests
